train test split

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -45,21 +45,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
+       "      <th>count</th>\n",
        "      <th>mean</th>\n",
        "      <th>var</th>\n",
-       "      <th>skew</th>\n",
+       "      <th>count</th>\n",
        "      <th>mean</th>\n",
        "      <th>var</th>\n",
-       "      <th>skew</th>\n",
+       "      <th>count</th>\n",
        "      <th>mean</th>\n",
        "      <th>var</th>\n",
-       "      <th>skew</th>\n",
+       "      <th>count</th>\n",
        "      <th>mean</th>\n",
        "      <th>var</th>\n",
-       "      <th>skew</th>\n",
+       "      <th>count</th>\n",
        "      <th>mean</th>\n",
        "      <th>var</th>\n",
-       "      <th>skew</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>class</th>\n",
@@ -83,83 +83,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>200</td>\n",
        "      <td>-8.420708</td>\n",
        "      <td>3.680863</td>\n",
-       "      <td>-0.362336</td>\n",
+       "      <td>200</td>\n",
        "      <td>12.016630</td>\n",
        "      <td>12.877729</td>\n",
-       "      <td>0.545496</td>\n",
+       "      <td>200</td>\n",
        "      <td>-5.634599</td>\n",
        "      <td>1.674577</td>\n",
-       "      <td>-0.667903</td>\n",
+       "      <td>200</td>\n",
        "      <td>-13.963915</td>\n",
        "      <td>16.111069</td>\n",
-       "      <td>-0.184969</td>\n",
+       "      <td>200</td>\n",
        "      <td>-14.026780</td>\n",
        "      <td>13.722221</td>\n",
-       "      <td>-0.983538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>500</td>\n",
        "      <td>-9.320480</td>\n",
        "      <td>3.537210</td>\n",
-       "      <td>-0.961844</td>\n",
+       "      <td>500</td>\n",
        "      <td>-5.265588</td>\n",
        "      <td>14.155351</td>\n",
-       "      <td>1.038260</td>\n",
+       "      <td>500</td>\n",
        "      <td>-4.657535</td>\n",
        "      <td>1.608868</td>\n",
-       "      <td>-1.045249</td>\n",
+       "      <td>500</td>\n",
        "      <td>-5.162992</td>\n",
        "      <td>15.115465</td>\n",
-       "      <td>-0.114441</td>\n",
+       "      <td>500</td>\n",
        "      <td>13.133143</td>\n",
        "      <td>13.974816</td>\n",
-       "      <td>-0.842213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>300</td>\n",
        "      <td>-15.498680</td>\n",
        "      <td>3.714898</td>\n",
-       "      <td>-0.704372</td>\n",
+       "      <td>300</td>\n",
        "      <td>23.961645</td>\n",
        "      <td>12.464764</td>\n",
-       "      <td>0.760787</td>\n",
+       "      <td>300</td>\n",
        "      <td>1.343592</td>\n",
        "      <td>1.553242</td>\n",
-       "      <td>-0.700437</td>\n",
+       "      <td>300</td>\n",
        "      <td>6.791279</td>\n",
        "      <td>17.778164</td>\n",
-       "      <td>-0.253586</td>\n",
+       "      <td>300</td>\n",
        "      <td>6.168479</td>\n",
        "      <td>14.357211</td>\n",
-       "      <td>-0.902386</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              x1                             x2                       \\\n",
-       "            mean       var      skew       mean        var      skew   \n",
-       "class                                                                  \n",
-       "0      -8.420708  3.680863 -0.362336  12.016630  12.877729  0.545496   \n",
-       "1      -9.320480  3.537210 -0.961844  -5.265588  14.155351  1.038260   \n",
-       "2     -15.498680  3.714898 -0.704372  23.961645  12.464764  0.760787   \n",
+       "         x1                         x2                          x3            \\\n",
+       "      count       mean       var count       mean        var count      mean   \n",
+       "class                                                                          \n",
+       "0       200  -8.420708  3.680863   200  12.016630  12.877729   200 -5.634599   \n",
+       "1       500  -9.320480  3.537210   500  -5.265588  14.155351   500 -4.657535   \n",
+       "2       300 -15.498680  3.714898   300  23.961645  12.464764   300  1.343592   \n",
        "\n",
-       "             x3                             x4                       \\\n",
-       "           mean       var      skew       mean        var      skew   \n",
-       "class                                                                 \n",
-       "0     -5.634599  1.674577 -0.667903 -13.963915  16.111069 -0.184969   \n",
-       "1     -4.657535  1.608868 -1.045249  -5.162992  15.115465 -0.114441   \n",
-       "2      1.343592  1.553242 -0.700437   6.791279  17.778164 -0.253586   \n",
-       "\n",
-       "              x5                       \n",
-       "            mean        var      skew  \n",
-       "class                                  \n",
-       "0     -14.026780  13.722221 -0.983538  \n",
-       "1      13.133143  13.974816 -0.842213  \n",
-       "2       6.168479  14.357211 -0.902386  "
+       "                   x4                          x5                        \n",
+       "            var count       mean        var count       mean        var  \n",
+       "class                                                                    \n",
+       "0      1.674577   200 -13.963915  16.111069   200 -14.026780  13.722221  \n",
+       "1      1.608868   500  -5.162992  15.115465   500  13.133143  13.974816  \n",
+       "2      1.553242   300   6.791279  17.778164   300   6.168479  14.357211  "
       ]
      },
      "metadata": {},
@@ -171,17 +164,7 @@
     "from scipy.stats import skewnorm, skew\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "\n",
-    "\n",
-    "#parameters\n",
-    "classes = [0.2, 0.5, 0.3] #percentages\n",
-    "n_vars = 5\n",
-    "n = 1000\n",
-    "max_mu = 20\n",
-    "max_sigma = 10\n",
-    "max_skew = 7\n",
-    "np.random.seed(12345)\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "def simulate_data(classes, n_vars, n, max_mu, max_sigma, max_skew):\n",
     "    #The multivariate skew normal number generator\n",
@@ -229,9 +212,25 @@
     "    df[\"class\"] = df[\"class\"].astype(int)\n",
     "    return X,y, df\n",
     "\n",
+    "\n",
+    "\n",
+    "#parameters\n",
+    "classes = [0.2, 0.5, 0.3] #percentages\n",
+    "n_vars = 5\n",
+    "n = 1000\n",
+    "max_mu = 20\n",
+    "max_sigma = 10\n",
+    "max_skew = 7\n",
+    "np.random.seed(12345)\n",
+    "\n",
+    "#generate data\n",
     "X,y, df = simulate_data(classes, n_vars, n, max_mu, max_sigma, max_skew)\n",
     "\n",
-    "display(df.groupby([\"class\"]).agg([\"mean\", \"var\", \"skew\"]))\n"
+    "display(df.groupby([\"class\"]).agg([\"count\", \"mean\", \"var\"]))\n",
+    "\n",
+    "#make train and test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.33, random_state=42)\n"
    ]
   },
   {
