--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,16 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[200. 500. 300.]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -83,76 +76,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>200</td>\n",
-       "      <td>-8.420708</td>\n",
-       "      <td>3.680863</td>\n",
-       "      <td>200</td>\n",
-       "      <td>12.016630</td>\n",
-       "      <td>12.877729</td>\n",
-       "      <td>200</td>\n",
-       "      <td>-5.634599</td>\n",
-       "      <td>1.674577</td>\n",
-       "      <td>200</td>\n",
-       "      <td>-13.963915</td>\n",
-       "      <td>16.111069</td>\n",
-       "      <td>200</td>\n",
-       "      <td>-14.026780</td>\n",
-       "      <td>13.722221</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>-8.383487</td>\n",
+       "      <td>3.514547</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>11.728285</td>\n",
+       "      <td>13.851757</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>-5.572087</td>\n",
+       "      <td>1.529541</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>-13.791497</td>\n",
+       "      <td>17.219184</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>-13.727987</td>\n",
+       "      <td>13.803013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>500</td>\n",
-       "      <td>-9.320480</td>\n",
-       "      <td>3.537210</td>\n",
-       "      <td>500</td>\n",
-       "      <td>-5.265588</td>\n",
-       "      <td>14.155351</td>\n",
-       "      <td>500</td>\n",
-       "      <td>-4.657535</td>\n",
-       "      <td>1.608868</td>\n",
-       "      <td>500</td>\n",
-       "      <td>-5.162992</td>\n",
-       "      <td>15.115465</td>\n",
-       "      <td>500</td>\n",
-       "      <td>13.133143</td>\n",
-       "      <td>13.974816</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>-9.338244</td>\n",
+       "      <td>3.504340</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>-5.280513</td>\n",
+       "      <td>13.565434</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>-4.575062</td>\n",
+       "      <td>1.529570</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>-4.801718</td>\n",
+       "      <td>16.765843</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>13.281707</td>\n",
+       "      <td>13.529252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>300</td>\n",
-       "      <td>-15.498680</td>\n",
-       "      <td>3.714898</td>\n",
-       "      <td>300</td>\n",
-       "      <td>23.961645</td>\n",
-       "      <td>12.464764</td>\n",
-       "      <td>300</td>\n",
-       "      <td>1.343592</td>\n",
-       "      <td>1.553242</td>\n",
-       "      <td>300</td>\n",
-       "      <td>6.791279</td>\n",
-       "      <td>17.778164</td>\n",
-       "      <td>300</td>\n",
-       "      <td>6.168479</td>\n",
-       "      <td>14.357211</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>-15.334147</td>\n",
+       "      <td>3.433368</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>23.741372</td>\n",
+       "      <td>13.795757</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>1.429721</td>\n",
+       "      <td>1.504561</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>6.185656</td>\n",
+       "      <td>17.029445</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>6.281662</td>\n",
+       "      <td>13.534370</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         x1                         x2                          x3            \\\n",
-       "      count       mean       var count       mean        var count      mean   \n",
-       "class                                                                          \n",
-       "0       200  -8.420708  3.680863   200  12.016630  12.877729   200 -5.634599   \n",
-       "1       500  -9.320480  3.537210   500  -5.265588  14.155351   500 -4.657535   \n",
-       "2       300 -15.498680  3.714898   300  23.961645  12.464764   300  1.343592   \n",
+       "          x1                          x2                           x3  \\\n",
+       "       count       mean       var  count       mean        var  count   \n",
+       "class                                                                   \n",
+       "0      20000  -8.383487  3.514547  20000  11.728285  13.851757  20000   \n",
+       "1      50000  -9.338244  3.504340  50000  -5.280513  13.565434  50000   \n",
+       "2      30000 -15.334147  3.433368  30000  23.741372  13.795757  30000   \n",
        "\n",
-       "                   x4                          x5                        \n",
-       "            var count       mean        var count       mean        var  \n",
-       "class                                                                    \n",
-       "0      1.674577   200 -13.963915  16.111069   200 -14.026780  13.722221  \n",
-       "1      1.608868   500  -5.162992  15.115465   500  13.133143  13.974816  \n",
-       "2      1.553242   300   6.791279  17.778164   300   6.168479  14.357211  "
+       "                              x4                           x5             \\\n",
+       "           mean       var  count       mean        var  count       mean   \n",
+       "class                                                                      \n",
+       "0     -5.572087  1.529541  20000 -13.791497  17.219184  20000 -13.727987   \n",
+       "1     -4.575062  1.529570  50000  -4.801718  16.765843  50000  13.281707   \n",
+       "2      1.429721  1.504561  30000   6.185656  17.029445  30000   6.281662   \n",
+       "\n",
+       "                  \n",
+       "             var  \n",
+       "class             \n",
+       "0      13.803013  \n",
+       "1      13.529252  \n",
+       "2      13.534370  "
       ]
      },
      "metadata": {},
@@ -190,8 +190,6 @@
     "    \n",
     "    n_obs_class = np.round(np.dot(classes,n))\n",
     "    \n",
-    "    print(n_obs_class)\n",
-    "    \n",
     "    data = np.zeros((int(np.sum(n_obs_class)),n_vars+1))\n",
     "    for i in range(n_classes):\n",
     "        #calculate indexes\n",
@@ -217,7 +215,7 @@
     "#parameters\n",
     "classes = [0.2, 0.5, 0.3] #percentages\n",
     "n_vars = 5\n",
-    "n = 1000\n",
+    "n = 100000\n",
     "max_mu = 20\n",
     "max_sigma = 10\n",
     "max_skew = 7\n",
@@ -264,38 +262,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3, 6, 5],\n",
-       "       [4, 8, 9],\n",
-       "       [1, 7, 9]])"
+       "<matplotlib.collections.PathCollection at 0x194f34653c8>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[6, 5],\n",
-       "       [8, 9],\n",
-       "       [7, 9]])"
-      ]
-     },
-     "execution_count": 156,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.seed(1234)\n",
-    "data = np.random.randint(0,10,(3,3))\n",
-    "display(data)\n",
-    "data[:,1:]"
+    "#LDA\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "lda = LinearDiscriminantAnalysis()\n",
+    "X_lda = lda.fit_transform(X, y)\n",
+    "\n",
+    "plt.xlabel('LD1')\n",
+    "plt.ylabel('LD2')\n",
+    "plt.scatter(\n",
+    "    X_lda[:,0],\n",
+    "    X_lda[:,1],\n",
+    "    c=y,\n",
+    "    cmap='rainbow',\n",
+    "    alpha=0.7,\n",
+    "    edgecolors='b'\n",
+    ")"
    ]
   }
  ],
