--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -432,15 +432,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "[0.25, 0.25, 0.25, 0.25]\n"
+      "LDA Test accuracy 0.5007272727272727\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.38      0.32      0.35      8250\n",
+      "         1.0       0.89      0.86      0.87      8250\n",
+      "         2.0       0.37      0.56      0.44      8250\n",
+      "         3.0       0.39      0.28      0.32      8250\n",
+      "\n",
+      "   micro avg       0.50      0.50      0.50     33000\n",
+      "   macro avg       0.51      0.50      0.50     33000\n",
+      "weighted avg       0.51      0.50      0.50     33000\n",
+      "\n"
      ]
     },
     {
@@ -469,6 +479,7 @@
        "      <th>predictions</th>\n",
        "      <th>report</th>\n",
        "      <th>model</th>\n",
+       "      <th>config</th>\n",
        "      <th>classes</th>\n",
        "      <th>n_vars</th>\n",
        "      <th>n</th>\n",
@@ -478,14 +489,37 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LDA</td>\n",
+       "      <td>0.500727</td>\n",
+       "      <td>[3.0, 2.0, 0.0, 3.0, 1.0, 2.0, 3.0, 2.0, 2.0, ...</td>\n",
+       "      <td>precision    recall  f1-score   ...</td>\n",
+       "      <td>LinearDiscriminantAnalysis(n_components=None, ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0.25, 0.25, 0.25, 0.25]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [method, accuracy, predictions, report, model, classes, n_vars, n, max_mu, max_sigma, max_skew]\n",
-       "Index: []"
+       "  method  accuracy                                        predictions  \\\n",
+       "0    LDA  0.500727  [3.0, 2.0, 0.0, 3.0, 1.0, 2.0, 3.0, 2.0, 2.0, ...   \n",
+       "\n",
+       "                                              report  \\\n",
+       "0                precision    recall  f1-score   ...   \n",
+       "\n",
+       "                                               model config  \\\n",
+       "0  LinearDiscriminantAnalysis(n_components=None, ...      1   \n",
+       "\n",
+       "                    classes n_vars       n max_mu max_sigma max_skew  \n",
+       "0  [0.25, 0.25, 0.25, 0.25]      2  100000      4        30       10  "
       ]
      },
      "metadata": {},
@@ -505,7 +539,7 @@
     "}] \n",
     "\n",
     "\n",
-    "columns = ['method', 'accuracy','predictions', \"report\", \"model\"] + list(configs[0].keys())\n",
+    "columns = ['method', 'accuracy','predictions', \"report\", \"model\", \"config\"] + list(configs[0].keys())\n",
     "\n",
     "results = pd.DataFrame(columns=columns)\n",
     "\n",
@@ -523,9 +557,11 @@
     "\n",
     "\n",
     "for i, c in enumerate(configs):\n",
-    "    X_train, X_test, y_train, y_test = simulate_data(c[\"classes, c.n_vars, c.n, c.max_mu, c.max_sigma, c.max_skew)\n",
+    "    X_train, X_test, y_train, y_test = simulate_data(c[\"classes\"], c[\"n_vars\"], c[\"n\"], c[\"max_mu\"], c[\"max_sigma\"], c[\"max_skew\"])\n",
     "    \n",
-    "# res = classify_lda(X_train, X_test, y_train, y_test, classes)\n",
+    "    lda = classify_lda(X_train, X_test, y_train, y_test, classes)                                     \n",
+    "    results = results.append({**lda, **c, \"config\":i+1},ignore_index=True)\n",
+    "# res = \n",
     "# dict3 = {**dict1 , **dict2}\n",
     "\n",
     "display(results)"
