--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -6915,21 +6915,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "Cannot access attribute 'style' of 'DataFrameGroupBy' objects, try using the 'apply' method",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-5825ff6e3975>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mold_results\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"./results/config 7 of 7 21-02-19 - 02-12-2019.pkl\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m display(old_results.groupby([\"method\"]).style.format({\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[1;34m'accuracy'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'{:,.3%}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     }))\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    561\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    562\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 563\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_wrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    564\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    565\u001b[0m         raise AttributeError(\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m_make_wrapper\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    602\u001b[0m                 \u001b[1;34m\"using the 'apply' method\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    603\u001b[0m             )\n\u001b[1;32m--> 604\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    605\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    606\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_group_selection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: Cannot access attribute 'style' of 'DataFrameGroupBy' objects, try using the 'apply' method"
-     ]
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098\" ><thead>    <tr>        <th class=\"index_name level0\" >config</th>        <th class=\"col_heading level0 col0\" >1</th>        <th class=\"col_heading level0 col1\" >2</th>        <th class=\"col_heading level0 col2\" >3</th>        <th class=\"col_heading level0 col3\" >4</th>        <th class=\"col_heading level0 col4\" >5</th>        <th class=\"col_heading level0 col5\" >6</th>        <th class=\"col_heading level0 col6\" >7</th>    </tr>    <tr>        <th class=\"index_name level0\" >method</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row0\" class=\"row_heading level0 row0\" >KNN-10</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row0_col0\" class=\"data row0 col0\" >49.091%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row0_col1\" class=\"data row0 col1\" >94.879%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row0_col2\" class=\"data row0 col2\" >99.242%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row0_col3\" class=\"data row0 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row0_col4\" class=\"data row0 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row0_col5\" class=\"data row0 col5\" >38.848%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row0_col6\" class=\"data row0 col6\" >34.709%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row1\" class=\"row_heading level0 row1\" >KNN-100</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row1_col0\" class=\"data row1 col0\" >47.273%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row1_col1\" class=\"data row1 col1\" >92.364%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row1_col2\" class=\"data row1 col2\" >98.636%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row1_col3\" class=\"data row1 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row1_col4\" class=\"data row1 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row1_col5\" class=\"data row1 col5\" >42.273%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row1_col6\" class=\"data row1 col6\" >37.742%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row2\" class=\"row_heading level0 row2\" >KNN-5</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row2_col0\" class=\"data row2 col0\" >44.848%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row2_col1\" class=\"data row2 col1\" >95.121%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row2_col2\" class=\"data row2 col2\" >99.364%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row2_col3\" class=\"data row2 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row2_col4\" class=\"data row2 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row2_col5\" class=\"data row2 col5\" >35.727%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row2_col6\" class=\"data row2 col6\" >33.194%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row3\" class=\"row_heading level0 row3\" >KNN-50</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row3_col0\" class=\"data row3 col0\" >53.939%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row3_col1\" class=\"data row3 col1\" >93.455%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row3_col2\" class=\"data row3 col2\" >98.879%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row3_col3\" class=\"data row3 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row3_col4\" class=\"data row3 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row3_col5\" class=\"data row3 col5\" >41.030%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row3_col6\" class=\"data row3 col6\" >37.406%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row4\" class=\"row_heading level0 row4\" >LDA</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row4_col0\" class=\"data row4 col0\" >55.758%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row4_col1\" class=\"data row4 col1\" >96.818%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row4_col2\" class=\"data row4 col2\" >99.970%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row4_col3\" class=\"data row4 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row4_col4\" class=\"data row4 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row4_col5\" class=\"data row4 col5\" >45.242%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row4_col6\" class=\"data row4 col6\" >39.942%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row5\" class=\"row_heading level0 row5\" >Logit</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row5_col0\" class=\"data row5 col0\" >56.364%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row5_col1\" class=\"data row5 col1\" >96.818%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row5_col2\" class=\"data row5 col2\" >99.879%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row5_col3\" class=\"data row5 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row5_col4\" class=\"data row5 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row5_col5\" class=\"data row5 col5\" >45.667%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row5_col6\" class=\"data row5 col6\" >40.030%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row6\" class=\"row_heading level0 row6\" >Naive Bayes</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row6_col0\" class=\"data row6 col0\" >53.333%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row6_col1\" class=\"data row6 col1\" >96.848%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row6_col2\" class=\"data row6 col2\" >99.970%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row6_col3\" class=\"data row6 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row6_col4\" class=\"data row6 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row6_col5\" class=\"data row6 col5\" >45.061%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row6_col6\" class=\"data row6 col6\" >39.945%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row7\" class=\"row_heading level0 row7\" >Net 30-30-30-30 E10</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row7_col0\" class=\"data row7 col0\" >52.121%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row7_col1\" class=\"data row7 col1\" >96.364%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row7_col2\" class=\"data row7 col2\" >99.697%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row7_col3\" class=\"data row7 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row7_col4\" class=\"data row7 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row7_col5\" class=\"data row7 col5\" >45.848%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row7_col6\" class=\"data row7 col6\" >41.185%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row8\" class=\"row_heading level0 row8\" >Net 4 E25</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row8_col0\" class=\"data row8 col0\" >33.939%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row8_col1\" class=\"data row8 col1\" >95.515%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row8_col2\" class=\"data row8 col2\" >99.242%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row8_col3\" class=\"data row8 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row8_col4\" class=\"data row8 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row8_col5\" class=\"data row8 col5\" >44.727%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row8_col6\" class=\"data row8 col6\" >41.042%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row9\" class=\"row_heading level0 row9\" >Net 50-50-50-50 E50</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row9_col0\" class=\"data row9 col0\" >52.121%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row9_col1\" class=\"data row9 col1\" >96.152%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row9_col2\" class=\"data row9 col2\" >99.970%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row9_col3\" class=\"data row9 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row9_col4\" class=\"data row9 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row9_col5\" class=\"data row9 col5\" >44.909%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row9_col6\" class=\"data row9 col6\" >41.227%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row10\" class=\"row_heading level0 row10\" >QDA</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row10_col0\" class=\"data row10 col0\" >52.727%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row10_col1\" class=\"data row10 col1\" >96.970%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row10_col2\" class=\"data row10 col2\" >99.970%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row10_col3\" class=\"data row10 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row10_col4\" class=\"data row10 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row10_col5\" class=\"data row10 col5\" >45.212%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row10_col6\" class=\"data row10 col6\" >39.997%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098level0_row11\" class=\"row_heading level0 row11\" >SVM</th>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row11_col0\" class=\"data row11 col0\" >56.364%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row11_col1\" class=\"data row11 col1\" >95.364%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row11_col2\" class=\"data row11 col2\" >99.485%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row11_col3\" class=\"data row11 col3\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row11_col4\" class=\"data row11 col4\" >100.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row11_col5\" class=\"data row11 col5\" >43.000%</td>\n",
+       "                        <td id=\"T_95e2baf8_1547_11ea_b8da_9cb6d0e5d098row11_col6\" class=\"data row11 col6\" >38.227%</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x20b337ddd30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -6939,7 +7067,9 @@
     "\n",
     "\n",
     "# .style.format({'accuracy': '{:,.3%}'.format})\n",
-    "display(old_results.groupby([\"method\"]))"
+    "display(old_results\n",
+    "        .pivot(index='method', columns='config', values='accuracy')\n",
+    "        .style.format('{:,.3%}'))"
    ]
   }
  ],
